<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_margin="16dp"
              android:orientation="vertical">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/tryst_photo"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:scaleType="centerInside"
                android:cropToPadding="true"
                android:background="@android:color/darker_gray"/>

            <ImageButton
                android:id="@+id/tryst_camera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@android:drawable/ic_menu_camera"/>

        </LinearLayout>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <TextView
                style="?android:listSeparatorTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tryst_title_label"/>

            <EditText
                android:id="@+id/tryst_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/tryst_title_hint"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tryst_details_label"/>

    <Button
        android:id="@+id/tryst_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <CheckBox
        android:id="@+id/tryst_taken"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tryst_taken_label"/>


    <Button
        android:id="@+id/tryst_friend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tryst_friend_text"/>

    <Button
        android:id="@+id/tryst_proposition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tryst_proposition_text"/>

</LinearLayout>